app/assets/stylesheets/application.css.scss
/* ... */
.white {
  color: white !important;
}

.hrDark {
  background: url(http://projekty.insisto.pl/rupy2/css/../images/hrDark.png) repeat-x bottom left;
  padding-bottom: 9px;
}

.speaker {
  min-height: 473px;
}

.modalLike {
  background: #e20031;
  padding: 15px 17px;
  text-align: justify;

  position: relative;
  min-height: 450px;
  color: #000033;
  margin: 0 auto;

  div.top {
    overflow: hidden;
    font-family: 'AvalonDemi';
    margin: 0 0 16px 0;

    div.title {
      float: left;

      p.white {
        font-size: 20px;
        margin: 12px 0 7px 0;
      }

      p.regular {
        margin: 0 0 12px 0;
      }
    }

    ul.params {
      margin: 15px;
      float: right;
      list-style-type: none;

      li {
        float: left;
        margin: 0 0 0 12px;
        line-height: 36px;

        span {
          float: left;
          margin: 0 11px 0 0;
        }
      }
    }
  }
}


h3.highline {
  text-align:    center;
  border-bottom: 1px solid #E20031;
  height:        20px;

  &:first-line {
    background-color: $bodyBackground;
  }

  &:before, &:after{
    content: '\0000a0 \0000a0';
  }
}

header {
  .container {
    border-bottom: 8px solid #E20031;
    padding-top:   16px;
    background:    image-url('rupy-logo-mini.png') no-repeat left 8px;
  }

  .navbar-inner {
    background: $bodyBackground;
  }

  .navbar-fixed-top > .navbar-inner {
    @include box-shadow(none);
  }

  .navbar .brand, .navbar .nav > li > a {
    text-shadow: none;
  }

  .nav {
    margin-right: 0 !important;

    & > li:last-of-type a {
      padding-right: 0;
    }

    .active > a {
      background: none !important;
      color:      #E20031 !important;
    }

    .highline {
      color: $textColor !important;
    }
  }

  .nav-collapse > .brand {
    margin-left: $gridGutterWidth;
    color:       $textColor;

    padding: {
      left:  0;
      right: 0;
    }
  }
}

.hero-unit {
  @include border-radius(0);

  border:     0 !important;
  padding:    0;
  background: none;
  margin-top: -20px;

  .registration-info {
    font-size:   16px;
    line-height: 20px;
  }

  .button-block + div.highline {
    margin-top: 40px;
  }

  blockquote {
    margin-bottom: 30px;
  }

  div.highline {
    margin-bottom: 40px;
  }

  #logo {
    margin: {
      left:   187px;
      bottom: 70px;
    }

    width:      688px;
    background: image-url('rupy-logo-large.png') no-repeat;

    h1 {
      @include hide-text();
    }

    p:first-of-type {
      margin: {
        top:  280px;
        left: 186px;
      }

      font-size:   32px;
      line-height: 30px;

      span:first-of-type {
        display: block;
        color: #E20031;
      }
    }
  }
}

.more-on-blog {
  text-align: center;
  font-size:   20px !important;
  line-height: 25px !important;

  margin: {
    top:    60px;
    bottom: 60px;
  }
}

.box {
  h4 {
    color:  #FFFFFF;
    margin: 0;

    span {
      display: block;
    }
  }

  .info {
    color: $bodyBackground;
    text-align: center;
    background: #E20031;
    height:     240px;

    a {
      color: inherit;
    }

    h4 {
      padding-top: 32px;

      & + .title, + p {
        margin-top: 25 + 18 + 5px !important;
      }
    }

    h4, .twitter {
      font-size:   25px;
      line-height: 25px;
    }

    .twitter {
      padding: {
        top:    18px;
        bottom: 5px;
      }
    }

    .title, .additional-info {
      font-size:   16px;
      line-height: 18px;
    }

    .center-block {
      display: table;
      width:   100%;

      .middle {
        display:        table-cell;
        vertical-align: middle;
      }
    }

    .title {
      height:  50px;
    }

    .additional-info {
      margin-top: 7px;

      a {
        @include font-family-sans-serif();

        text-decoration: underline;
      }
    }

    .more-speakers {
      height:      100%;

      p {
        font-size:   20px;
        line-height: 25px;
        color:       #FFFFFF;
      }

      span {
        display: block;
      }
    }
  }
}

#about {
  h3.highline {
    height:        24px;
    margin-bottom: 40px;
  }

  .news {
    font-size:   16px;
    line-height: 20px;

    .tweeted {
      display: block;
    }

    .tweet_text, .rss-feed p {
      a {
        @include font-family-sans-serif();

        color: #E20031;
      }
    }

   .tweet_list {
      span.at + a {
        color: inherit;
      }
    }

    ul {
      @extend ul.unstyled;
    }
  }
}

#contact {
  padding:     60px 0;
  font-size:   32px;
  line-height: 37px;

  span:first-of-type {
    color: #E20031;
  }
}

#faq {
  h3 {
    text-align:    center;
    font-size:     25px;
    line-height:   31px;
    margin-bottom: 25px;

    span {
      display: block;
    }
  }

  p {
    font-size:   16px;
    line-height: 20px;
  }

  .row {
    margin-bottom: 70px;
  }
}

#social {
  font-size: 16px;
  border:    0;
  color:     #E20031;
  height:    36px;
}

#sponsors {
  .sponsors {
    padding-bottom: 25px;
  }

  .logo {
    &.redhat {
      padding-top: 1.65em;
    }
    &.vendavo {
      padding-top: 1em;
    }
  }

  .description {
    @include content-columns(2, $gridColumnWidth);

    margin-bottom: 0;
  }

  .logos {
    padding: {
      left:  $gridColumnWidth;
      right: $gridColumnWidth;
    }

    a {
      margin-right: $gridGutterWidth;
    }

    a:last-of-type {
      margin-right: 0;
    }
  }

  .button-block {
    margin-bottom: 65px;
  }

  h3.highline:last-of-type + div.sponsors {
    border-bottom: 1px solid #E20031;
    margin-bottom: 45px;
  }

  div.sponsors:last-of-type {
    border-bottom: 0 !important;
  }
}
/* ... */

